--- a/src/components/pag1/BodyInit.css
+++ b/src/components/pag1/BodyInit.css
@@ -1,11 +1,15 @@
 #Thumbnail{
     height: 100%;
     width: 100%;
+    
+}
+#imgIon{
+    filter:blur(4px);
 }
 #changingMax{
     max-width: 1100px;
 }
-#align{
+#textInside{
     text-align: center;
 }
 #auxiliaryBox{
@@ -14,19 +18,54 @@
 .auxiliaryText{
     font-size: large;
 }
-@media screen and (max-width:350px) {
-    #align{
-        font-size: small;
-    }
-    .auxiliaryText{
-        font-size: small;
-    }
+#handsome{
+    position:  absolute !important;
+    background-color: rgba(254, 254, 255, 0.534);
+    width: 100%;
+    height: 40%;
+    top:40%;
+    color: black;
+}
+#textInside{
+    font-size: 46px;
 }
 @media screen and (max-width:700px) {
-    #align{
-        font-size: medium;   
+    #textInside{
+        font-size: 38px;   
     }
     .auxiliaryText{
         font-size: medium;
+    }
+}
+@media screen and (max-width:580px) {
+    #textInside{
+        font-size: 30px;   
+    }
+    .auxiliaryText{
+        font-size: medium;
+    }
+}
+@media screen and (max-width:462px) {
+    #textInside{
+        font-size: 23px;   
+    }
+    .auxiliaryText{
+        font-size: medium;
+    }
+}
+@media screen and (max-width:360px) {
+    #textInside{
+        font-size: 20px;   
+    }
+    .auxiliaryText{
+        font-size: medium;
+    }
+}
+@media screen and (max-width:350px) {
+    #textInside{
+        font-size: large;
+    }
+    .auxiliaryText{
+        font-size: small;
     }
 }
