--- a/src/components/Home/BodyInit.css
+++ b/src/components/Home/BodyInit.css
@@ -1,71 +1,40 @@
-#Thumbnail{
-    height: 100%;
-    width: 100%;
-    
+#img-apresentation {
+    height: 38vh;
+    object-fit: cover;
+    object-position: 0px 71%;
 }
-#imgIon{
-    filter:blur(4px);
+
+#project-apresentacao{
+    padding-top: 0;
 }
-#changingMax{
-    max-width: 1100px;
-}
-#textInside{
-    text-align: center;
-}
-#auxiliaryBox{
-    max-width: 350px;
-}
-.auxiliaryText{
-    font-size: large;
-}
-#handsome{
+
+
+#project-apresentacao #project-title{
     position:  absolute !important;
+    bottom: 0;
+    
+    height: 4.2rem;
+    width: 80%;
+    margin: 0 10%;
+
     background-color: rgba(254, 254, 255, 0.534);
-    width: 100%;
-    height: 40%;
-    top:40%;
     color: black;
 }
-#textInside{
-    font-size: 46px;
+
+#project-apresentacao #project-title h2{
+    text-align: center;
+    font-weight: bold;
 }
-@media screen and (max-width:700px) {
-    #textInside{
-        font-size: 38px;   
-    }
-    .auxiliaryText{
-        font-size: medium;
-    }
-}
-@media screen and (max-width:580px) {
-    #textInside{
-        font-size: 30px;   
-    }
-    .auxiliaryText{
-        font-size: medium;
-    }
-}
-@media screen and (max-width:462px) {
-    #textInside{
-        font-size: 23px;   
-    }
-    .auxiliaryText{
-        font-size: medium;
-    }
-}
-@media screen and (max-width:360px) {
-    #textInside{
-        font-size: 20px;   
-    }
-    .auxiliaryText{
-        font-size: medium;
-    }
-}
-@media screen and (max-width:350px) {
-    #textInside{
-        font-size: large;
-    }
-    .auxiliaryText{
-        font-size: small;
+
+@media (max-width: 748px){
+    #project-apresentacao #project-title{
+        height: auto;
+        width: 100%;
+        margin: 0 0;
+    }    
+    #project-apresentacao #project-title h2{
+        text-align: left;
+        font-weight: bold;
+        padding-left: 2.6rem;
     }
 }
