--- a/src/components/Who/WhoBody.css
+++ b/src/components/Who/WhoBody.css
@@ -1,140 +1,94 @@
+.popover-info-sobre {
+    --width: 60vw;
+}
+
+.pop-header{
+    font-weight: bold;
+    text-align: center;
+}
+
+.LinhaZuda {
+    align-content: center;
+    min-height: inherit;
+}
+
+.avatar-card{
+    min-width: max-content !important;
+    min-height: max-content;
+
+    display: grid;
+    justify-items: center;
+    align-items: center;
+}
+
+.descricao{
+    align-self: center;
+    padding: 0 1.2rem;
+    min-height: max-content;
+}
+
 .itensWe{
-    height: 150px;
+    min-height: 150px;
 }
 .AvatarUs{
-    height:90px;
-    width: 90px;
+    /*height:90px;
+    width: 90px;*/
+
+    width: max-content;
+    height: max-content;
+
+    display: grid;
+    justify-items: center;
 }
+.AvatarUs ion-img{
+    width: 90px;
+    height: 90px;
+
+    align-self: center;
+}
+
 .NomesAvatar{
-        text-align:center;
-    }
+    text-align:center;
+    width: max-content;
+    padding: 0 .6rem;
+}
 .arrowItem{
     height: 30px;
     width: 30px;
-    top: 45px;
-    left: 110px;
-    position: absolute;
+    align-self: center;
+    /*top: 45px;*/
+    /*left: 110px;*/
+    /*position: absolute;*/
 }
 .textDescribe{
     text-align: justify;
-    position: absolute;
-    left:150px;
-    margin-right: 10px;
+    /*position: absolute;*/
+    /*left:150px;*/
+    /*margin-right: 10px;*/
 }
-@media (max-width:1230px) {
+
+
+@media (max-width:648px) {
     .itensWe{
-        height: 140px;
+        min-height: max-content;
     }
-}
-@media (max-width:1100px) {
-    .itensWe{
-        height: 150px;
+    .LinhaZuda{
+        flex-direction: column;
+        align-items: center;
     }
-}
-@media (max-width:1007px) {
-    .itensWe{
-        height: 160px;
-    }
-}
-@media (max-width:943px) {
-    .itensWe{
-        height: 180px;
-    }
-}
-@media (max-width:855px) {
-    .itensWe{
-        height: 220px;
-    }
-}
-@media (max-width:791px) {
-    .itensWe{
-        height: 250px;
-    }
-}
-@media (max-width:702px) {
-    .itensWe{
-        height: 330px;
-    }
-}
-@media (max-width:600px) {
-    .itensWe{
-        height: 390px;
-    }
-}
-@media (max-width:534px) {
-    .itensWe{
-        height: 550px;
-    }
-    .AvatarUs{
-        position: absolute;
-        left: 37%;/*41%*/
-        height:120px;
-        width: 120px;
-    }
-    
     .arrowItem{
         height: 30px;
         width: 30px;
-        top: 170px;
-        left: 47%;
-        position: absolute;
         transform: rotate(90deg);
     }
-    .textDescribe{
-        position: absolute;
-        left:50px;
-        margin-right: 50px;
-        top: 210px;
-        max-width: 100%;
-    }
-    
-}
-@media (max-width:498px) {
-    .itensWe{
-        height: 605px;
-    }
-}
-@media (max-width:462px) {
-    .AvatarUs{
-        left:35%;
+
+    .AvatarUs ion-img{
+        width: 120px;
+        height: 120px;
     }
 }
 @media (max-width:422px) {
-    .itensWe{
-        height: 640px;
-    }
-    .arrowItem{
-        left:45%;
-    }
-    .AvatarUs{
-        left:32%;
-    }
     .textDescribe{
-        position: absolute;
-        left:25px;
-        margin-right: 25px;
-        top: 210px;
         max-width: 100%;
-    }
-}
-
-@media (max-width:348px) {
-    .AvatarUs{
-        left:30%;
-    }
-    .textDescribe{
-        position: absolute;
-        left:15px;
-        margin-right: 15px;
-        top: 210px;
-        max-width: 100%;
-    }
-    .itensWe{
-        height: 700px;
-    }
-}
-@media (max-width:310px) {
-    .itensWe{
-        height: 750px;
     }
 }
