--- a/src/components/Why/BodyWhy.css
+++ b/src/components/Why/BodyWhy.css
@@ -63,7 +63,7 @@
     }
 }
 
-/*@media (max-width:1867px) {
+@media (max-width:1867px) {
     #toast{
         display: flex;
         position: fixed;
@@ -77,25 +77,25 @@
         opacity: 0;
         font-size: larger;
     }
-    #imgWhy{
+    /*#imgWhy{
         height: calc(100vh - 90px);
     }
     #IonCardRight{
         height: calc(100vh - 18vw);
         max-height: calc(100vh - 18vw);
-    }
-}*/
+    }*/
+}
 /*@media (max-width:900px) {
     #imageWhy{
         height: 75vh;
     }
-}
+}*/
 @media (max-width:750px) {
     #toast{
         font-size: small;
     }
 }
-@media (max-width:760px) {
+/*@media (max-width:760px) {
     #imageWhy{
         height: 550px;
     }
@@ -111,8 +111,8 @@
         font-size: larger;
         line-height: 22px;
     }
-}*/
-/*@media (max-width:500px) {
+}
+@media (max-width:500px) {
     #imageWhy{
         display: none;
     }
